--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,11 +17,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.4.2",
+    "classnames": "^2.3.1",
     "framer-motion": "^4",
     "gh-pages": "^3.2.3",
+    "postcss": "^8.4.6",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
+    "tailwindcss": "^3.0.18",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
